--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/fav/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/fav/favicon-16x16.png">
     <link rel="manifest" href="/fav/site.webmanifest">
-    <title>Compute-Platform | WONGLOK.com</title>
+    <title>🙏🏻 ✝️ | Compute-Platform | WONGLOK.com</title>
   </head>
   <body>
     <noscript>
